implementation/generated_ASTs/test/test262/tests/language/expressions/object/method-definition/early-errors-object-method-duplicate-parameters.js.esl
function buildAST (___internal_esl_global) {
__n0 := {  };
__n0["type"] := "Program";
__n0["sourceType"] := "script";
__n2 := {  };
__n2["type"] := "ExpressionStatement";
__n3 := {  };
__n3["type"] := "CallExpression";
__n4 := {  };
__n4["type"] := "Identifier";
__n4["name"] := "$DONOTEVALUATE";
__n3["callee"] := __n4;
__n5 := [  ];
__n3["arguments"] := __n5;
__n2["expression"] := __n3;
__n6 := {  };
__n6["type"] := "ExpressionStatement";
__n7 := {  };
__n7["type"] := "ObjectExpression";
__n9 := {  };
__n9["type"] := "Property";
__n10 := {  };
__n10["type"] := "Identifier";
__n10["name"] := "foo";
__n9["key"] := __n10;
__n11 := {  };
__n11["type"] := "FunctionExpression";
__n11["id"] := null;
__n12 := [ "a", "a" ];
__n11["params"] := __n12;
__n13 := {  };
__n13["type"] := "BlockStatement";
__n14 := [  ];
__n13["body"] := __n14;
__n15 := [  ];
__n13["variableDeclarations"] := __n15;
__n16 := [  ];
__n13["functionDeclarations"] := __n16;
__n13["codeType"] := "function";
__n13["strict"] := false;
__n11["body"] := __n13;
__n11["generator"] := false;
__n11["async"] := false;
__n11["expression"] := false;
__n9["value"] := __n11;
__n9["computed"] := false;
__n9["kind"] := "init";
__n9["shorthand"] := false;
__n8 := [ __n9 ];
__n7["properties"] := __n8;
__n6["expression"] := __n7;
__n1 := [ __n2, __n6 ];
__n0["body"] := __n1;
__n0["optimised"] := true;
__n17 := [  ];
__n0["variableDeclarations"] := __n17;
__n18 := [  ];
__n0["functionDeclarations"] := __n18;
__n0["codeType"] := "global";
__n0["strict"] := false;
return ( false, __n0 )
}